simplify the album art stuff